<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_audiotrack_light"
        android:layout_alignBottom="@+id/track_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_view"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ImageView
            android:id="@+id/options"
            android:background="@drawable/ic_more_vert_black_48dp"
            android:layout_width="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/description_nLine1"
        android:id="@+id/track_description"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingBottom="7dp"
        android:layout_below="@+id/trackTextView"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toStartOf="@id/size"
        android:textColor="@color/common_google_signin_btn_text_light_default" />

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recording_001"
        android:id="@+id/trackTextView"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toStartOf="@+id/size"
        android:layout_alignStart="@id/track_description"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/size"
        android:layout_toStartOf="@+id/options">
    </CheckBox>

    <TextView
        android:text="@string/n_n_n"
        android:layout_height="wrap_content"
        android:id="@+id/wholeItem"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_toStartOf="@+id/options"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/my_selector"
        android:alpha="0.2" />

    <TextView
        android:text="@string/length"
        android:id="@+id/length"
        android:layout_alignBottom="@+id/options"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_alignEnd="@id/wholeItem"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="20dp"
        android:layout_width="75dp"
        android:textColor="@color/common_google_signin_btn_text_light_default" />

    <TextView
        android:id="@+id/size"
        android:text="@string/Size"
        android:layout_below="@+id/length"
        android:layout_alignEnd="@id/wholeItem"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="20dp"
        android:layout_width="75dp"
        android:textColor="@color/common_google_signin_btn_text_light_default" />

    <TextView
        android:text="@string/n_n_n"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/optionItem"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toEndOf="@+id/wholeItem"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/my_selector"
        android:alpha="0.2" />

    <View android:background="@color/black_54p"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/wholeItem" />

</RelativeLayout>